# anemll-flash-llama.cpp

./: .gitignore  CLAUDE.md  README.md  SECURITY.md
common/: arg.cpp  chat.cpp  common.cpp  common.h  sampling.cpp
docs/: dsv4-logit-tolerance-policy-draft.md  dsv4-m5-metal-performance-handoff.md  dsv4-target-layer-spec.md  dsv4-tolerance-policy.md  flashmoe-layer-major-dedup-single-sidecar.md  flashmoe-multi-ssd-handoff.md  session-export-2026-05-15-turn102.md
include/: llama.h
scripts/: dsv4_analyze_aohc_payload_semantics.py  dsv4_analyze_cupd_payload_semantics.py  dsv4_analyze_hc_weighted_sum.py  dsv4_analyze_hcnorm_payload_semantics.py  dsv4_analyze_kv_weighted_sum.py  dsv4_analyze_rmoe_payload_semantics.py  dsv4_compare_metal_traces.py  dsv4_compare_result_chain_dump.py  dsv4_compare_rmoe_downstream_dump.py  dsv4_compare_rmoe_gate_up_dump.py  dsv4_compare_rmoe_graph_trace.py  dsv4_compare_rmoe_replace_dump.py  dsv4_compare_rmoe_substage_dump.py  dsv4_compare_rmoe_swiglu_dump.py  dsv4_compare_rmoe_swiglu_stage_dump.py  dsv4_first_divergence.py  dsv4_logit_compare.py  dsv4_normalize_layer_executor_captures.py
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-context.h  llama-cparams.h  llama-grammar.cpp  llama-graph.cpp  llama-graph.h  llama-hparams.h  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid-iswa.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory.h  (+6 more)
tools/flashmoe-expert-bench/: CMakeLists.txt  flashmoe-expert-bench.cpp
(+101 files in other folders)
